fix: adjust spacing in narratives (#181)
* fix: adjust spacing in narratives

* fix: adjust spacing in narrative scenarios

--- a/src/assets/styles/print.css
+++ b/src/assets/styles/print.css
@@ -629,7 +629,12 @@ li svg.web {
     position: relative;
 }
 
-.journey-map.narrative-1-fr .scenario {
+.journey-map.narrative-fr .usual h5 {
+    position: relative;
+    top: -15pt;
+}
+
+.journey-map.narrative-1.narrative-fr .scenario {
     top: -48pt;
 }
 
@@ -639,17 +644,17 @@ li svg.web {
 
 .journey-map.narrative-1 .scenario li:first-child {
     left: 164pt;
-    top: 88pt;
+    top: 81pt;
 }
 
 .journey-map.narrative-1 .scenario li:nth-child(2) {
     left: 164pt;
-    top: 163pt;
+    top: 156pt;
 }
 
 .journey-map.narrative-1 .scenario li:nth-child(3) {
     left: 164pt;
-    top: 238pt;
+    top: 231pt;
 }
 
 .journey-map.narrative-1 .usual {
@@ -690,23 +695,23 @@ li svg.web {
     width: 182pt;
 }
 
-.journey-map.narrative-2-fr .scenario {
+.journey-map.narrative-2.narrative-fr .scenario {
     top: -47pt;
 }
 
 .journey-map.narrative-2 .scenario li:first-child {
     left: 164pt;
-    top: 87pt;
+    top: 79pt;
 }
 
 .journey-map.narrative-2 .scenario li:nth-child(2) {
     left: 164pt;
-    top: 180pt;
+    top: 172pt;
 }
 
 .journey-map.narrative-2 .scenario li:nth-child(3) {
     left: 164pt;
-    top: 273pt;
+    top: 265pt;
 }
 
 .journey-map.narrative-2 .usual {
@@ -753,17 +758,17 @@ li svg.web {
 
 .journey-map.narrative-3 .scenario li:first-child {
     left: 164pt;
-    top: 37pt;
+    top: 32pt;
 }
 
 .journey-map.narrative-3 .scenario li:nth-child(2) {
     left: 164pt;
-    top: 133pt;
+    top: 128pt;
 }
 
 .journey-map.narrative-3 .scenario li:nth-child(3) {
     left: 164pt;
-    top: 247pt;
+    top: 242pt;
 }
 
 .journey-map.narrative-3 .usual {
@@ -810,17 +815,17 @@ li svg.web {
 
 .journey-map.narrative-4 .scenario li:first-child {
     left: 164pt;
-    top: 65pt;
+    top: 60pt;
 }
 
 .journey-map.narrative-4 .scenario li:nth-child(2) {
     left: 164pt;
-    top: 217pt;
+    top: 212pt;
 }
 
 .journey-map.narrative-4 .scenario li:nth-child(3) {
     left: 164pt;
-    top: 315pt;
+    top: 310pt;
 }
 
 .journey-map.narrative-4 .usual {
